fix: Update descriptions for consistency in become-expert and for-organizations sections
- Revised descriptions in the become-expert and for-organizations MDX files to ensure consistent use of quotation marks.
- Enhanced clarity in messaging regarding services offered under the Eleva Care platform.

--- a/src/content/become-expert/en.mdx
+++ b/src/content/become-expert/en.mdx
@@ -52,7 +52,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'users',
       title: 'Reach More Clients',
-      description: 'Get discovered by clients seeking women's health services through our platform. Focus on care, not marketing.',
+      description: "Get discovered by clients seeking women's health services through our platform. Focus on care, not marketing.",
     },
     {
       icon: 'trending',
