--- a/src/content/for-organizations/en.mdx
+++ b/src/content/for-organizations/en.mdx
@@ -61,13 +61,13 @@ import WhoCanJoinSection from '@/components/sections/for-organizations/WhoCanJoi
       icon: 'building',
       title: 'Keep Your Brand',
       description:
-        'White-label options let you offer Eleva Care-powered services under your organization's brand. Your clients, your relationships.',
+        "White-label options let you offer Eleva Care-powered services under your organization's brand. Your clients, your relationships.",
     },
     {
       icon: 'dollar',
       title: 'Flexible Business Model',
       description:
-        'Workspace subscriptions with transparent pricing. Scale up or down based on your organization's needs.',
+        "Workspace subscriptions with transparent pricing. Scale up or down based on your organization's needs.",
     },
     {
       icon: 'chart',
