fix: Standardize descriptions and update imports in become-expert section
- Revised descriptions in the become-expert MDX file for consistency in formatting and clarity.
- Updated import statements to ensure proper component structure and organization.
- Enhanced overall readability and presentation of the content to better reflect Eleva Care's messaging.

--- a/src/content/become-expert/en.mdx
+++ b/src/content/become-expert/en.mdx
@@ -1,19 +1,21 @@
 export const metadata = {
-  title: "Become an Expert | Join Our Platform | Eleva Care",
-  description: "Join Eleva Care as an independent healthcare professional. Set your own rates, manage your schedule, and deliver care on your terms through our secure platform.",
+  title: 'Become an Expert | Join Our Platform | Eleva Care',
+  description:
+    'Join Eleva Care as an independent healthcare professional. Set your own rates, manage your schedule, and deliver care on your terms through our secure platform.',
   og: {
-    title: "Become an Expert | Join Our Platform | Eleva Care",
-    description: "Join Eleva Care as an independent, licensed healthcare professional. Set your own rates and deliver care through our secure platform.",
-    siteName: "Eleva Care"
-  }
+    title: 'Become an Expert | Join Our Platform | Eleva Care',
+    description:
+      'Join Eleva Care as an independent, licensed healthcare professional. Set your own rates and deliver care through our secure platform.',
+    siteName: 'Eleva Care',
+  },
 };
 
-import HeroSection from '@/components/sections/become-expert/HeroSection';
 import BenefitsSection from '@/components/sections/become-expert/BenefitsSection';
 import ExpertPricingSection from '@/components/sections/become-expert/ExpertPricingSection';
+import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
+import HeroSection from '@/components/sections/become-expert/HeroSection';
 import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
 import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
-import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
 import { Sparkles, TrendingUp } from 'lucide-react';
 
 <HeroSection
@@ -32,32 +34,38 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'shield',
       title: 'Full Clinical Independence',
-      description: 'You remain an independent professional with full clinical autonomy. You decide how to care for your clients—Eleva.care simply provides the platform technology.',
+      description:
+        'You remain an independent professional with full clinical autonomy. You decide how to care for your clients—Eleva.care simply provides the platform technology.',
     },
     {
       icon: 'dollar',
       title: 'Set Your Own Rates',
-      description: 'You decide what your time is worth. Keep 80% of your earnings and get paid weekly through secure payment processing.',
+      description:
+        'You decide what your time is worth. Keep 80% of your earnings and get paid weekly through secure payment processing.',
     },
     {
       icon: 'calendar',
       title: 'Flexible Scheduling',
-      description: 'Control your calendar completely. Work as much or as little as you want, whenever you want.',
+      description:
+        'Control your calendar completely. Work as much or as little as you want, whenever you want.',
     },
     {
       icon: 'video',
       title: 'Secure Video Consultations',
-      description: 'Conduct sessions from anywhere on our encrypted, GDPR-compliant platform. All you need is a computer and internet connection.',
+      description:
+        'Conduct sessions from anywhere on our encrypted, GDPR-compliant platform. All you need is a computer and internet connection.',
     },
     {
       icon: 'users',
       title: 'Reach More Clients',
-      description: "Get discovered by clients seeking women's health services through our platform. Focus on care, not marketing.",
+      description:
+        "Get discovered by clients seeking women's health services through our platform. Focus on care, not marketing.",
     },
     {
       icon: 'trending',
       title: 'Professional Tools',
-      description: 'Client management, automated invoicing, booking pages, and analytics—everything you need to run your independent practice.',
+      description:
+        'Client management, automated invoicing, booking pages, and analytics—everything you need to run your independent practice.',
     },
   ]}
 />
@@ -67,19 +75,23 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   steps={[
     {
       title: 'Create Your Profile',
-      description: 'Share your expertise, credentials, and availability. Tell clients what makes you unique.',
+      description:
+        'Share your expertise, credentials, and availability. Tell clients what makes you unique.',
     },
     {
       title: 'Set Your Services & Rates',
-      description: 'Define your offerings and pricing. You have complete control over your business.',
+      description:
+        'Define your offerings and pricing. You have complete control over your business.',
     },
     {
       title: 'Get Discovered',
-      description: 'Clients find you through search and recommendations. Start receiving booking requests.',
+      description:
+        'Clients find you through search and recommendations. Start receiving booking requests.',
     },
     {
       title: 'Provide Your Service',
-      description: 'Conduct sessions, help clients achieve their goals, and build your reputation through reviews.',
+      description:
+        'Conduct sessions, help clients achieve their goals, and build your reputation through reviews.',
     },
   ]}
   ctaButton="Start Your Journey"
@@ -244,22 +256,26 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'badge',
       title: 'Valid Professional License',
-      description: 'Active license or certification in your healthcare field. You self-certify your credentials and remain responsible for your professional status.',
+      description:
+        'Active license or certification in your healthcare field. You self-certify your credentials and remain responsible for your professional status.',
     },
     {
       icon: 'shield',
       title: 'Professional Liability Insurance',
-      description: 'Appropriate malpractice or professional indemnity coverage for your practice area.',
+      description:
+        'Appropriate malpractice or professional indemnity coverage for your practice area.',
     },
     {
       icon: 'globe',
       title: 'Reliable Internet & Equipment',
-      description: 'Stable internet connection and suitable environment for professional video consultations.',
+      description:
+        'Stable internet connection and suitable environment for professional video consultations.',
     },
     {
       icon: 'heart',
       title: 'Commitment to Quality Care',
-      description: 'Dedication to evidence-based practices and delivering excellent care to your clients.',
+      description:
+        'Dedication to evidence-based practices and delivering excellent care to your clients.',
     },
   ]}
 />
