refactor: Update layout and component imports for legal and trust documentation
- Enhanced the layout structure for legal and trust documentation pages to improve consistency and maintainability.
- Updated component imports to utilize MDX components for better rendering and flexibility.
- Adjusted styling in layout files to enhance visual presentation and user experience.

--- a/src/content/docs/clinic/en/analytics/dashboard.mdx
+++ b/src/content/docs/clinic/en/analytics/dashboard.mdx
@@ -103,10 +103,10 @@ Monitor your team's effectiveness:
 | Metric | Description | Target |
 |--------|-------------|--------|
 | **Bookings** | Total appointments | Varies |
-| **Completion Rate** | Completed / Total | >95% |
-| **On-Time Rate** | Started on time | >90% |
-| **Rating** | Patient satisfaction | >4.5 |
-| **Response Time** | Time to respond to inquiries | <24h |
+| **Completion Rate** | Completed / Total | 95%+ |
+| **On-Time Rate** | Started on time | 90%+ |
+| **Rating** | Patient satisfaction | 4.5+ |
+| **Response Time** | Time to respond to inquiries | Under 24h |
 
 ### Expert Comparison
 
